--- a/css/bootstrap/sticky-footer-navbar.css
+++ b/css/bootstrap/sticky-footer-navbar.css
@@ -29,9 +29,9 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
-#wrap > .container {
+/*#wrap > .container {
   padding: 60px 15px 0;
-}
+}*/
 .container .credit {
   margin: 20px 0;
 }
